chor : user-service에서 common 모듈 의존성 추가

--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -57,6 +57,9 @@ dependencies {
 	// 테스트
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// Common패키지
+	implementation project(':common')
 }
 
 dependencyManagement {
