fix : 빌드가 정상적으로 되도록 하기 위해 common 모듈을 수정
- 기존걸 복사하는 과정에서 패키지 명이 잘못되어있어 수정하였습니다.
- common모듈에 필요한 의존성을 추가하였습니다.
- Eureka서비스에 정상적으로 user-service가 등록되기 위하여 build.gradle을 수정하였습니다.

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -27,6 +27,8 @@ eureka:
   client:
     service-url:
       defaultZone: ${EUREKA_SERVER}
+    register-with-eureka: true
+    fetch-registry: true
 
 management:
   zipkin:
