feat : 인가 필터 - 게이트웨이 기본 셋팅
- 게이트웨이에 common모듈 추가 및 환경변수 파일 설정

--- a/gateway-service/build.gradle
+++ b/gateway-service/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// Common패키지
+	implementation project(':common')
 }
 
 dependencyManagement {
