refactor : SecurityConextFilter, CustomUesrDetails작성
- common모듈에서 Filter를 추가적으로 작성하여 모든 로직이 해당 필터를 거치도록 설정하였습니다.
- 해당 Filter에서 헤더에 UserId, role이 존재하는 지 확인 후 없다면 그냥 다음 필터로 넘어감.

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
+	// SpringSecurity
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 }
 
 tasks.named('test') {
