--- a/eureka-service/src/main/resources/application.yml
+++ b/eureka-service/src/main/resources/application.yml
@@ -1,15 +1,14 @@
-spring:
-  application:
-    name: server
-
 server:
   port: 19090
+
+spring:
+  application:
+    name: eureka-server
 
 eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
-    service-url:
-      defaultZone: http://localhost:19090/eureka/
-  instance:
-    hostname: localhost
+  server:
+    enable-self-preservation: false
+    wait-time-in-ms-when-sync-empty: 0
