hotfix : 인증/인가 필터 수정
- 시큐리티 인증/인가쪽에서 경린님 오류가 발생해 수정하였습니다.
- 추후에 자세하게 알아볼 예정입니다.

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -23,6 +23,11 @@ spring:
           predicates:
             - Path=/user-service/api/login
             - Method=POST
+        - id: user-service-test
+          uri: lb://user-service
+          predicates:
+            - Path=/user-service/api/hello2
+            - Method=GET
         - id: user-service-logout
           uri: lb://user-service
           predicates:
