feat: Product-service search 구현

--- a/product-service/build.gradle
+++ b/product-service/build.gradle
@@ -47,8 +47,15 @@ dependencies {
 	//kafka
 	implementation 'org.springframework.kafka:spring-kafka'
 
+
 	// Common패키지
 	implementation project(':common')
+
+	//QueryDSL
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
 
 	compileOnly 'org.projectlombok:lombok'
