--- a/hub-service/build.gradle
+++ b/hub-service/build.gradle
@@ -53,6 +53,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// Common패키지
+	implementation project(':common')
 }
 
 dependencyManagement {
