--- a/hub-service/src/main/resources/application.yml
+++ b/hub-service/src/main/resources/application.yml
@@ -3,13 +3,13 @@ server:
 
 spring:
   application:
-    name: hub
+    name: hub-service
 
   # MariaDB
   datasource:
-    url: jdbc:mariadb://${DB_PORT}/hubapp
-    username: ${SPRING_DATASOURCE_USERNAME}
-    password: ${SPRING_DATASOURCE_PASSWORD}
+    url: ${DB_URL}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
     driver-class-name: org.mariadb.jdbc.Driver
 
   # Redis
