--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -64,6 +64,9 @@ spring:
           uri: lb://product-service
           predicates:
             - Path=/product-service/api/**
+          filters:
+            - name: AuthPermissionPreFilter
+
       discovery:
         locator:
           enabled: true  # 서비스 디스커버리를 통해 동적으로 라우트를 생성하도록 설정
