--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -67,6 +67,9 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
 
+	// Kafka
+	implementation 'org.springframework.kafka:spring-kafka'
+
 }
 
 dependencyManagement {
