--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -1,14 +1,11 @@
 server:
-  port: ${SERVER_PORT}
+  port: 19091
 
 spring:
   main:
     web-application-type: reactive
   application:
     name: gateway-service
-
-  config:
-    import: optional:file:.env[.properties]
   cloud:
     gateway:
       routes:
@@ -17,6 +14,11 @@ spring:
           uri: lb://user-service
           predicates:
             - Path=/user-service/api/signup
+            - Method=POST
+        - id: slack-service
+          uri: lb://slack-service
+          predicates:
+            - Path=/slack-service/api/slack
             - Method=POST
         - id: user-service-login
           uri: lb://user-service
@@ -41,12 +43,6 @@ spring:
             - Path=/user-service/api/**  # 경로로 들어오는 요청을 이 라우트로 처리
           filters:
             - name: AuthPermissionPreFilter
-        - id: slack-service
-          uri: lb://slack-service
-          predicates:
-            - Path=/slack-service/api/**
-          filters:
-            - name: AuthPermissionPreFilter
         - id: store-service
           uri: lb://store-service
           predicates:
@@ -64,7 +60,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: ${EUREKA_SERVER}
+      defaultZone: http://eureka-server:19090/eureka
     register-with-eureka: true
     fetch-registry: true
 
