--- a/eureka-service/src/main/resources/application.yml
+++ b/eureka-service/src/main/resources/application.yml
@@ -9,6 +9,8 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+    service-url:
+      defaultZone: http://localhost:19090/eureka/
   server:
     enable-self-preservation: false
     wait-time-in-ms-when-sync-empty: 0
