--- a/slack-service/docker-compose.yml
+++ b/slack-service/docker-compose.yml
@@ -25,16 +25,18 @@ services:
       - .env
     environment:
       SPRING_DATASOURCE_URL: jdbc:mariadb://slack-mariadb:3306/slack-database?useSSL=false
-      SPRING_DATASOURCE_USERNAME: slackUser
-      SPRING_DATASOURCE_PASSWORD: 19890422pkl!
+      SPRING_DATASOURCE_USERNAME: ${DB_USER}
+      SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
       JWT_SECRET: ${JWT_SECRET}
       KAFKA_BOOTSTRAP_SERVERS: kafka:9092
       REDIS_HOST: redis
       REDIS_PORT: 6379
-      EUREKA_SERVER: http://eureka-server:19090/eureka
-      MANAGEMENT_ZIPKIN_TRACING_ENDPOINT: http://zipkin:9411/api/v2/spans
+      EUREKA_SERVER: ${EUREKA_SERVER}
+      MANAGEMENT_ZIPKIN_TRACING_ENDPOINT: ${ZIPKIN_URL}
+      SLACK_BOT_TOKEN: ${SLACK_BOT_TOKEN}
+      AI_API_KEY: ${AI_API_KEY}
     ports:
-      - "${SERVER_PORT}:8080"
+      - "19098:19098"
     networks:
       - gaebal-network
 
