--- a/slack-service/src/main/resources/application.yml
+++ b/slack-service/src/main/resources/application.yml
@@ -1,16 +1,17 @@
 server:
-  port: ${SERVER_PORT}
+  port: 19098
+  address: 0.0.0.0
 
 spring:
   application:
     name: slack-service
   datasource:
     url: jdbc:mariadb://slack-mariadb:3306/slack-database?useSSL=false
-    username: slackUser
-    password: 19890422pkl!
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
 
   kafka:
-    bootstrap-servers: kafka:${KAFKA_PORT}
+    bootstrap-servers: kafka:9092
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
@@ -28,7 +29,7 @@ spring:
   data:
     redis:
       host: redis
-      port: ${REDIS_PORT}
+      port: 6379
 
 eureka:
   client:
@@ -43,7 +44,18 @@ jwt:
 management:
   zipkin:
     tracing:
-      endpoint: "http://zipkin:9411/api/v2/spans"
+      endpoint: ${ZIPKIN_URL}
   tracing:
     sampling:
       probability: 1.0
+
+slack:
+  token: ${SLACK_BOT_TOKEN}
+
+ai:
+  api:
+    key: ${AI_API_KEY}
+
+
+
+
