--- a/hub-service/docker-compose.yml
+++ b/hub-service/docker-compose.yml
@@ -33,8 +33,8 @@ services:
       KAFKA_BOOTSTRAP_SERVERS: kafka:9092
       REDIS_HOST: redis
       REDIS_PORT: 6379
-#      EUREKA_SERVER: http://eureka-server:19090/eureka
-#      MANAGEMENT_ZIPKIN_TRACING_ENDPOINT: http://zipkin:9411/api/v2/spans
+      EUREKA_SERVER: http://eureka-server:19090/eureka
+      MANAGEMENT_ZIPKIN_TRACING_ENDPOINT: http://zipkin:9411/api/v2/spans
     ports:
       - "${SERVER_PORT}:8080"
     networks:
