--- a/hub-service/build.gradle
+++ b/hub-service/build.gradle
@@ -28,6 +28,7 @@ ext {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation project(':common')
 	// zipkin
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
