feat: slack api 구현

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,11 +1,10 @@
 server:
   port: ${SERVER_PORT}
+  address: 0.0.0.0
 
 spring:
   application:
     name: user-service
-  config:
-    import: optional:file:.env[.properties]
 
   jpa:
     hibernate:
