--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -15,11 +15,6 @@ spring:
           predicates:
             - Path=/user-service/api/signup
             - Method=POST
-        - id: slack-service
-          uri: lb://slack-service
-          predicates:
-            - Path=/slack-service/api/slack
-            - Method=POST
         - id: user-service-login
           uri: lb://user-service
           predicates:
@@ -60,6 +55,14 @@ spring:
           uri: lb://product-service
           predicates:
             - Path=/product-service/api/**
+          filters:
+            - name: AuthPermissionPreFilter
+
+        - id: slack-service-get-messages
+          uri: lb://slack-service
+          predicates:
+            - Path=/slack-service/api/**;
+            - Method=GET
           filters:
             - name: AuthPermissionPreFilter
 
