--- a/slack-service/build.gradle
+++ b/slack-service/build.gradle
@@ -65,6 +65,12 @@ dependencies {
 
 	//gemini webclient
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+	// SpringSecurity
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
 }
 
 dependencyManagement {
