--- a/eureka-service/src/main/resources/application.yml
+++ b/eureka-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: server
+    name: eureka-server
 
 server:
   port: 19090
@@ -10,6 +10,6 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://localhost:19090/eureka/
+      defaultZone: http://eureka-server:19090/eureka/
   instance:
     hostname: localhost
