--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -7,8 +7,6 @@ spring:
   application:
     name: gateway-service
 
-  config:
-    import: optional:file:.env[.properties]
   cloud:
     gateway:
       routes:
@@ -59,6 +57,7 @@ spring:
           filters:
             - name: AuthPermissionPreFilter
 
+
         # product-service
         - id: product-service
           uri: lb://product-service
@@ -66,6 +65,14 @@ spring:
             - Path=/product-service/api/**
           filters:
             - name: AuthPermissionPreFilter
+
+
+        - id: hub-service
+          uri: lb://HUB-SERVICE
+          predicates:
+            - Path=/hub-service/api/**
+          filters:
+            - RewritePath=/hub-service/(?<path>.*), /hub-service/$\\{path}
 
       discovery:
         locator:
