fix : 잘못된 설정 수정
- hubManager쪽에 잘못된 cascade.all이 설정됨. 이렇게 되면 hub_manager저장할때 hub도 저장할려고함. 오류 발생.

- 직렬화할때는 기본생성자가 있어야함. AccessLevel.PROTECTED로 하면 Jackson이 사용못함. public으로 수정

--- a/hub-service/src/main/resources/application.yml
+++ b/hub-service/src/main/resources/application.yml
@@ -33,7 +33,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     defer-datasource-initialization: true
     show-sql: true
 
