chore: gitignore application-dev 추가

--- a/user-service/.gitignore
+++ b/user-service/.gitignore
@@ -1,6 +1,7 @@
 
 ### SpringBoot 직접 추가 ###
 src/main/resources/properties/env.properties
+src/main/resources/application-dev.yml
 
 # Created by https://www.toptal.com/developers/gitignore/api/windows,macos,git,java,maven,eclipse,intellij,gradle,netbeans,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,git,java,maven,eclipse,intellij,gradle,netbeans,visualstudiocode
