--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 #Custom(직접추가)
 env.properties
+src/main/resources/application-dev.yml
 
 # Created by https://www.toptal.com/developers/gitignore/api/windows,macos,git,java,maven,eclipse,intellij,gradle,netbeans,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,git,java,maven,eclipse,intellij,gradle,netbeans,visualstudiocode
