--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -47,6 +47,8 @@ dependencies {
 	//kafka
 	implementation 'org.springframework.kafka:spring-kafka'
 
+	// Common패키지
+	implementation project(':common')
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
