--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -67,6 +67,22 @@ spring:
           filters:
             - name: AuthPermissionPreFilter
 
+        # order-service
+        - id: order-service
+          uri: lb://order-service
+          predicates:
+            - Path=/order-service/api/**
+          filters:
+            - name: AuthPermissionPreFilter
+
+        # hub-service
+        - id: hub-service
+          uri: lb://hub-service
+          predicates:
+            - Path=/hub-service/api/**
+          filters:
+            - name: AuthPermissionPreFilter
+
       discovery:
         locator:
           enabled: true  # 서비스 디스커버리를 통해 동적으로 라우트를 생성하도록 설정
