--- a/hub-service/build.gradle
+++ b/hub-service/build.gradle
@@ -44,7 +44,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
 	//redis
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+//	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.redisson:redisson-spring-boot-starter:3.41.0'
 
 	//kafka
 	implementation 'org.springframework.kafka:spring-kafka'
