--- a/.gitignore
+++ b/.gitignore
@@ -357,3 +357,4 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,git,java,maven,eclipse,intellij,gradle,netbeans,visualstudiocode
+gateway-service/.env
