--- a/hub-service/docker-compose.yml
+++ b/hub-service/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       EUREKA_SERVER: http://eureka-server:19090/eureka
       MANAGEMENT_ZIPKIN_TRACING_ENDPOINT: http://zipkin:9411/api/v2/spans
     ports:
-      - "${SERVER_PORT}:8080"
+      - "${SERVER_PORT}:${SERVER_PORT}"
     networks:
       - gaebal-network
 
