feat: slack 배송 담당자 지정시 카프카 이벤트 등록 및 정보 전송

--- a/hub-service/src/main/resources/application.yml
+++ b/hub-service/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: hub-service
 
   datasource:
-    url: jdbc:mariadb://localhost:3310/hub-database?useSSL=false
+    url: jdbc:mariadb://hub-service:3310/hub-database?useSSL=false
     username: gaebal
     password: gaebal
     driver-class-name: org.mariadb.jdbc.Driver
@@ -14,7 +14,7 @@ spring:
   # Redis
   data:
     redis:
-      host: localhost
+      host:
       port: ${REDIS_PORT}
       username: default
       password: systempass
