--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
   application:
     name: gateway-service
 
-  config:
-    import: optional:file:.env[.properties]
+#  config:
+#    import: optional:file:.env[.properties]
   cloud:
     gateway:
       routes:
