fix : gateway hub-service predicates 수정

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -76,14 +76,16 @@ spring:
 
         - id: slack-service-get-messages
           uri: lb://slack-service
-
-        - id: hub-service
-          uri: lb://hub-service
           predicates:
             - Path=/slack-service/api/**
           filters:
             - name: AuthPermissionPreFilter
+        - id: hub-service
+          uri: lb://hub-service
+          predicates:
             - Path=/hub-service/api/**
+          filters:
+            - name: AuthPermissionPreFilter
 
       discovery:
         locator:
