--- a/hub-service/build.gradle
+++ b/hub-service/build.gradle
@@ -58,6 +58,9 @@ dependencies {
 
 	// Common패키지
 	implementation project(':common')
+
+	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+
 }
 
 dependencyManagement {
