--- a/hub-service/src/main/resources/application.yml
+++ b/hub-service/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
   # Redis
   data:
     redis:
-      host:
+      host: redis
       port: ${REDIS_PORT}
       username: default
       password: systempass
@@ -36,12 +36,20 @@ spring:
       ddl-auto: update
     show-sql: true
 
+naver:
+  direction5:
+    client-id: ${Client_ID}
+    client-secret: ${Client_Secret}
+
+
+
 eureka:
   client:
     service-url:
       defaultZone: ${EUREKA_SERVER}
     register-with-eureka: true
     fetch-registry: true
+
 
 
 jwt:
