feat : 배송담당자 생성 이벤트 작성

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -64,7 +64,12 @@ spring:
             - Path=/store-service/api/**
           filters:
             - name: AuthPermissionPreFilter
-
+        - id: delivery-service
+          uri: lb://delivery-service
+          predicates:
+              - Path=/delivery-service/api/**
+          filters:
+              - name: AuthPermissionPreFilter
 
         # product-service
         - id: product-service
