feat : 배송담당자 할당 - redis 로직 구현
list(배송담당자 id값들이 담긴 리스트)
indexKey : 현재 배송담당자 순번(index)을 의미

--- a/delivery-service/src/main/resources/application.yml
+++ b/delivery-service/src/main/resources/application.yml
@@ -30,11 +30,9 @@ spring:
     show-sql: true
   data:
     redis:
-      host: redis
+      host: ${REDIS_HOST} #sever : redis
       port: 6379
-  sql:
-    init:
-      mode: always
+
 eureka:
   client:
     service-url:
