--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
   application:
     name: gateway-service
 
-#  config:
-#    import: optional:file:.env[.properties]
+  config:
+    import: optional:file:.env[.properties]
   cloud:
     gateway:
       routes:
@@ -78,14 +78,16 @@ spring:
 
         - id: slack-service-get-messages
           uri: lb://slack-service
+          predicates:
+            - Path=/slack-service/api/**
 
         - id: hub-service
           uri: lb://hub-service
           predicates:
-            - Path=/slack-service/api/**
+            - Path=/hub-service/api/**
           filters:
             - name: AuthPermissionPreFilter
-            - Path=/hub-service/api/**
+
 
         # order-service
         - id: order-service
