--- a/hub-service/src/main/resources/application.yml
+++ b/hub-service/src/main/resources/application.yml
@@ -1,12 +1,71 @@
+#server:
+#  port: ${SERVER_PORT}
+#  address: 0.0.0.0
+#
+#spring:
+#  application:
+#    name: hub-service
+#  datasource:
+#    url: jdbc:mariadb://mariadb:3310/hub-database?useSSL=false
+#    username: ${DB_USER}
+#    password: ${DB_PASSWORD}
+#    driver-class-name: org.mariadb.jdbc.Driver
+#
+#  # Redis
+#  data:
+#    redis:
+#      host:
+#      port: ${REDIS_PORT}
+#      username: default
+#      password: systempass
+#
+#  # Kafka
+#  kafka:
+#    url: ${KAFKA_URL}
+#    bootstrap-servers: ${KAFKA_URL}
+#    producer:
+#      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+#      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+#      retries: 5 # 메시지 전송 실패시 재시도 횟수 5회.
+#    consumer:
+#      auto-offset-reset: earliest  # 컨슈머가 처음 시작할 때 어떤 오프셋부터 읽을지 설정 (earliest: 가장 오래된 메시지부터, latest: 최신 메시지부터)
+#
+#  jpa:
+#    database-platform: org.hibernate.dialect.MariaDBDialect
+#    hibernate:
+#      ddl-auto: update
+#    show-sql: true
+#
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: ${EUREKA_SERVER}
+#    register-with-eureka: true
+#    fetch-registry: true
+#
+#
+#jwt:
+#  secret: ${JWT_SECRET}
+#
+#management:
+#  zipkin:
+#    tracing:
+#      endpoint: ${ZIPKIN_URL}
+#  tracing:
+#    sampling:
+#      probability: 1.0
+
 server:
   port: ${SERVER_PORT}
-  address: 0.0.0.0
 
 spring:
   application:
     name: hub-service
+  config:
+    import: optional:file:.env[.properties]
+  # MariaDB
   datasource:
-    url: jdbc:mariadb://mariadb:3310/hub-database?useSSL=false
+    url: ${DB_URL}
     username: ${DB_USER}
     password: ${DB_PASSWORD}
     driver-class-name: org.mariadb.jdbc.Driver
@@ -14,10 +73,11 @@ spring:
   # Redis
   data:
     redis:
-      host:
+      host: localhost
       port: ${REDIS_PORT}
       username: default
       password: systempass
+
 
   # Kafka
   kafka:
@@ -28,25 +88,28 @@ spring:
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
       retries: 5 # 메시지 전송 실패시 재시도 횟수 5회.
     consumer:
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       auto-offset-reset: earliest  # 컨슈머가 처음 시작할 때 어떤 오프셋부터 읽을지 설정 (earliest: 가장 오래된 메시지부터, latest: 최신 메시지부터)
 
   jpa:
-    database-platform: org.hibernate.dialect.MariaDBDialect
     hibernate:
       ddl-auto: update
-    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        naming:
+          physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+    database-platform: org.hibernate.dialect.MariaDBDialect
+
 
 eureka:
   client:
     service-url:
       defaultZone: ${EUREKA_SERVER}
-    register-with-eureka: true
-    fetch-registry: true
 
 
-jwt:
-  secret: ${JWT_SECRET}
-
+# zipkin
 management:
   zipkin:
     tracing:
@@ -54,3 +117,4 @@ management:
   tracing:
     sampling:
       probability: 1.0
+
