feat : deliveryUser 삭제 구현

--- a/hub-service/src/main/resources/application.yml
+++ b/hub-service/src/main/resources/application.yml
@@ -14,10 +14,8 @@ spring:
   # Redis
   data:
     redis:
-      host:
+      host: ${REDIS_HOST} #sever : redis
       port: ${REDIS_PORT}
-      username: default
-      password: systempass
 
   # Kafka
   kafka:
