chore: gateway 설정 및 errorcode 추가

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -47,6 +47,17 @@ spring:
           uri: lb://hub-service
           predicates:
             - Path=/hub-service/api/**
+        #store-service
+        - id: store-service-getList
+          uri: lb://store-service
+          predicates:
+            - Path=/store-service/api/getStores/**
+            - Method=GET
+        - id: store-service-search
+          uri: lb://store-service
+          predicates:
+            - Path=/store-service/api/search/**
+            - Method=GET
         # 로그인 필요한 요청(토큰 검증 필터 존재)
         - id: user-service # 라우트 식별자
           uri: lb://user-service  # 'user-service'라는 이름으로 로드 밸런싱된 서비스로 라우팅
@@ -60,13 +71,27 @@ spring:
             - Path=/slack-service/api/**
           filters:
             - name: AuthPermissionPreFilter
+        #store-service
         - id: store-service
           uri: lb://store-service
           predicates:
-            - Path=/store-service/api/**
+            - Path=/store-service/api/create/**
           filters:
             - name: AuthPermissionPreFilter
 
+        - id: store-service-update
+          uri: lb://store-service
+          predicates:
+            - Path=/store-service/api/update/**
+          filters:
+            - name: AuthPermissionPreFilter
+
+        - id: store-service-delete
+          uri: lb://store-service
+          predicates:
+            - Path=/store-service/api/delete/**
+          filters:
+            - name: AuthPermissionPreFilter
 
         # product-service
         - id: product-service
@@ -78,14 +103,18 @@ spring:
 
         - id: slack-service-get-messages
           uri: lb://slack-service
-
-        - id: hub-service
-          uri: lb://hub-service
           predicates:
-            - Path=/slack-service/api/**
+            - Path=/slack-service/api/getSlack
           filters:
             - name: AuthPermissionPreFilter
-            - Path=/hub-service/api/**
+
+#        - id: hub-service
+#          uri: lb://hub-service
+#          predicates:
+#            - Path=/slack-service/api/**
+#          filters:
+#            - name: AuthPermissionPreFilter
+#            - Path=/hub-service/api/**
 
       discovery:
         locator:
