--- a/hub-service/src/main/resources/application.yml
+++ b/hub-service/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   application:
     name: hub-service
   datasource:
-    url: jdbc:mariadb://mariadb:3310/hub-database?useSSL=false
+    url: ${DB_URL}
     username: ${DB_USER}
     password: ${DB_PASSWORD}
     driver-class-name: org.mariadb.jdbc.Driver
