--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -4,8 +4,8 @@ server:
 spring:
   application:
     name: order-service
-  config:
-    import: optional:file:.env[.properties]
+#  config:
+#    import: optional:file:.env[.properties]
   # MariaDB
   datasource:
     url: ${DB_URL}
