--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -43,7 +43,7 @@ spring:
           predicates:
             - Path=/delivery-service/api/send
             - Method=GET
-        - id: hub-service
+        - id: hub-service  #TODO: order에 있는 hubclient 주소 로그인 없이 추가
           uri: lb://hub-service
           predicates:
             - Path=/hub-service/api/**
@@ -114,12 +114,12 @@ spring:
           filters:
             - name: AuthPermissionPreFilter
 
-        - id: hub-service
-          uri: lb://hub-service
-          predicates:
-            - Path=/hub-service/api/**
-          filters:
-            - name: AuthPermissionPreFilter
+#        - id: hub-service
+#          uri: lb://hub-service
+#          predicates:
+#            - Path=/hub-service/api/**
+#          filters:
+#            - name: AuthPermissionPreFilter
 
 
         # order-service
