--- a/order-service/docker-compose.yml
+++ b/order-service/docker-compose.yml
@@ -4,34 +4,42 @@ services:
     container_name: order-mariadb
     restart: always
     environment:
-      MYSQL_DATABASE: gaebal-easy
-      MYSQL_USER: ${DB_USER}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MARIADB_DATABASE: order-database
+      MARIADB_USER: ${DB_USER}
+      MARIADB_PASSWORD: ${DB_PASSWORD}
+      MARIADB_ROOT_PASSWORD: ${DB_PASSWORD}
     ports:
       - "${DB_PORT}:3306"
     networks:
       - gaebal-network
-  
+
   backend:
+    build:
+      context: .
+      dockerfile: Dockerfile
     image: order-backend
+    container_name: order-backend
     depends_on:
       - mariadb
-      - redis
-      - kafka
     env_file:
       - .env
     environment:
-      SPRING_DATASOURCE_USERNAME: gaebaleasy
+      DB_URL: ${DB_URL}
+      SPRING_DATASOURCE_USERNAME: ${DB_USER}
       SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
       JWT_SECRET: ${JWT_SECRET}
-      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
       REDIS_HOST: redis
       REDIS_PORT: 6379
-      EUREKA_SERVER: http://eureka-server:19090/eureka
+      EUREKA_SERVER: ${EUREKA_SERVER}
+      MANAGEMENT_ZIPKIN_TRACING_ENDPOINT: ${ZIPKIN_URL}
+      SLACK_BOT_TOKEN: ${SLACK_BOT_TOKEN}
+      AI_API_KEY: ${AI_API_KEY}
     ports:
-      - "${SERVER_PORT}:8080"
+      - "${SERVER_PORT}:${SERVER_PORT}"
     networks:
       - gaebal-network
 
 networks:
   gaebal-network:
+    external: true
