--- a/common/build.gradle
+++ b/common/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 
 	// SpringSecurity
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 }
 
 tasks.named('test') {
