--- a/delivery-service/build.gradle
+++ b/delivery-service/build.gradle
@@ -58,6 +58,9 @@ dependencies {
 
 	implementation 'org.springframework.kafka:spring-kafka'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
+
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2' // Swaggger 의존성
+
 }
 
 dependencyManagement {
