--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -70,6 +70,8 @@ dependencies {
 	// Kafka
 	implementation 'org.springframework.kafka:spring-kafka'
 
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2' // Swaggger 의존성
+
 }
 
 dependencyManagement {
