--- a/store-service/build.gradle
+++ b/store-service/build.gradle
@@ -69,6 +69,9 @@ dependencies {
 
 	implementation 'org.springframework.kafka:spring-kafka'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
+
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2' // Swaggger 의존성
+
 }
 
 
