--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
   application:
     name: gateway-service
 
-  config:
-    import: optional:file:.env[.properties]
+#  config:
+#    import: optional:file:.env[.properties]
   cloud:
     gateway:
       routes:
@@ -128,8 +128,8 @@ spring:
           uri: lb://order-service
           predicates:
             - Path=/order-service/api/**
-#          filters:
-#            - name: AuthPermissionPreFilter
+          filters:
+            - name: AuthPermissionPreFilter
 
         # Swagger UI 허용 설정
         - id: user-service-swagger
