--- a/hub-service/src/main/resources/application.yml
+++ b/hub-service/src/main/resources/application.yml
@@ -1,10 +1,12 @@
 server:
   port: ${SERVER_PORT}
-  address: 0.0.0.0
 
 spring:
   application:
     name: hub-service
+  config:
+    import: optional:file:.env[.properties]
+  # MariaDB
   datasource:
     url: ${DB_URL}
     username: ${DB_USER}
@@ -16,6 +18,9 @@ spring:
     redis:
       host: localhost
       port: ${REDIS_PORT}
+      username: default
+      password: systempass
+
 
   # Kafka
   kafka:
@@ -26,25 +31,28 @@ spring:
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
       retries: 5 # 메시지 전송 실패시 재시도 횟수 5회.
     consumer:
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       auto-offset-reset: earliest  # 컨슈머가 처음 시작할 때 어떤 오프셋부터 읽을지 설정 (earliest: 가장 오래된 메시지부터, latest: 최신 메시지부터)
 
   jpa:
-    database-platform: org.hibernate.dialect.MariaDBDialect
     hibernate:
       ddl-auto: update
-    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        naming:
+          physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+    database-platform: org.hibernate.dialect.MariaDBDialect
+
 
 eureka:
   client:
     service-url:
       defaultZone: ${EUREKA_SERVER}
-    register-with-eureka: true
-    fetch-registry: true
 
 
-jwt:
-  secret: ${JWT_SECRET}
-
+# zipkin
 management:
   zipkin:
     tracing:
@@ -52,11 +60,3 @@ management:
   tracing:
     sampling:
       probability: 1.0
-
-springdoc:
-  default-produces-media-type: application/json
-  api-docs:
-    path: /v3/api-docs
-  swagger-ui:
-    path: /swagger-ui.html
-    display-request-duration: true
