--- a/delivery-service/build.gradle
+++ b/delivery-service/build.gradle
@@ -60,7 +60,7 @@ dependencies {
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
 
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2' // Swaggger 의존성
-
+	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 }
 
 dependencyManagement {
