--- a/delivery-service/docker-compose.yml
+++ b/delivery-service/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     env_file:
       - .env
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mariadb://hub-mariadb:3306/delivery-database?useSSL=false
+      SPRING_DATASOURCE_URL: jdbc:mariadb://delivery-mariadb:3306/delivery-database?useSSL=false
       SPRING_DATASOURCE_USERNAME: gaebal
       SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
       JWT_SECRET: ${JWT_SECRET}
