--- a/hub-service/docker-compose.yml
+++ b/hub-service/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     env_file:
       - .env
     environment:
-      DB_URL: ${DB_URL}
+      DB_URL: jdbc:mariadb://hub-mariadb:3306/hub-database?useSSL=false
       SPRING_DATASOURCE_USERNAME: ${DB_USER}
       SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
       JWT_SECRET: ${JWT_SECRET}
