--- a/hub-service/src/main/resources/application.yml
+++ b/hub-service/src/main/resources/application.yml
@@ -36,8 +36,8 @@ spring:
 
 naver:
   direction5:
-    client-id: ${Client_ID}
-    client-secret: ${Client_Secret}
+    client-id: xiaa6iqavs
+    client-secret: v94QtnEuR0JAyMG1rISkJLC2DVSyHZZJdSbTZmtJ
 
 
 
