--- a/slack-service/docker-compose.yml
+++ b/slack-service/docker-compose.yml
@@ -24,11 +24,11 @@ services:
     env_file:
       - .env
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mariadb://slack-mariadb:3306/slack-database?useSSL=false
+      SPRING_DATASOURCE_URL: ${DB_URL}
       SPRING_DATASOURCE_USERNAME: ${DB_USER}
       SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
       JWT_SECRET: ${JWT_SECRET}
-      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
       REDIS_HOST: redis
       REDIS_PORT: 6379
       EUREKA_SERVER: ${EUREKA_SERVER}
