--- a/slack-service/src/main/resources/application.yml
+++ b/slack-service/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 server:
-  port: 19098
+  port: ${SERVER_PORT}
   address: 0.0.0.0
 
 spring:
   application:
     name: slack-service
   datasource:
-    url: jdbc:mariadb://slack-mariadb:3306/slack-database?useSSL=false
+    url: ${KAFKA_BOOTSTRAP_SERVERS}
     username: ${DB_USER}
     password: ${DB_PASSWORD}
 
