--- a/.gitignore
+++ b/.gitignore
@@ -95,7 +95,7 @@ local.properties
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
-.idea
+.idea/**
 # AWS User-specific
 .idea/**/aws.xml
 
