--- a/delivery-service/build.gradle
+++ b/delivery-service/build.gradle
@@ -61,6 +61,9 @@ dependencies {
 
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2' // Swaggger 의존성
 	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+
+	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 }
 
 dependencyManagement {
